--- a/src/views/_404.pug
+++ b/src/views/_404.pug
@@ -1,6 +1,7 @@
-//- CLIENT INDEX VIEW TEMPLATE
-
 extends layout
 
 block content
-  p not here
+    .centered.text-center
+        .display-1 404
+        hr
+        .display-5 Looks like we can't find the page you're looking for!
